[feat] : 참여한 이벤트 조회 API의 성능을 개선한다 (#236)
* #233 [refactor] : 중복 메서드를 분리하고 fetch join을 적용한다

* #233 [feat] : 불필요한 의존성을 제거한다

* #233 [feat] : 캐시 맵을 활용해 중복 호출을 감소시킨다

* #233 [feat] : 이벤트를 함께 가져오도록 변경해 N+1문제를 방지한다

* #233 [feat] : 멤버를 이벤트와 함께 가져오도록 변경해 N+1문제를 방지한다

* #233 [feat] : 중복 호출을 제거한다

* #233 [feat] : 불필요한 서비스 코드를 제거한다

* #233 [feat] : Comparator와 TreeMap을 활용해 자동 정렬을 유지한다

* #233 [feat] : AtomicInteger를 사용해 order를 지정한다